Working on render functions

--- a/sales.html
+++ b/sales.html
@@ -4,8 +4,9 @@
 
   </head>
   <main>
-
+    <ul id='storeList'></ul>
   </main>
   <footer>
+    <script src="JS/app.js"></script>
   </footer>
 </html>
