Figuring out 1st and Pike cookies

--- a/sales.html
+++ b/sales.html
@@ -4,7 +4,7 @@
 
   </head>
   <main>
-    <ul id='storeList'></ul>
+    <ul id='firstPike'></ul>
   </main>
   <footer>
     <script src="JS/app.js"></script>
