Got all the store sales numbers

--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,10 @@
   </head>
   <main>
     <ul id='firstPike'></ul>
+    <ul id='SeaTac Airport'></ul>
+    <ul id='Seattle Center'></ul>
+    <ul id='Capitol Hill'></ul>
+    <ul id='Alki'></ul>
   </main>
   <footer>
     <script src="JS/app.js"></script>
