--- a/sales.html
+++ b/sales.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <main>
     <ul id='firstPike'></ul>
