adding headers to each store list

--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,15 @@
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <main>
+    <h2>First and Pike</h2>
     <ul id='firstPike'></ul>
+    <h2>SeaTac Airport</h2>
     <ul id='SeaTac Airport'></ul>
+    <h2>Seattle Center</h2>
     <ul id='Seattle Center'></ul>
+    <h2>Capitol Hill</h2>
     <ul id='Capitol Hill'></ul>
+    <h2>Alki</h2>
     <ul id='Alki'></ul>
   </main>
   <footer>
