adding some css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <header>Pat's Salmon Cookies</header>
+    <title>Pat's Salmon Cookies</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- reference found on google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   </head>
-  <main>
-    
-  </main>
+  <body>
+    <header>
+      <h1>Pat's Salmon Cookies</h1>
+      <img src="imgs/salmon.png" alt="realistic salmon photo" />
+      <nav>
+        <ul>
+          <li><a>About Us</a></li>
+          <li><a>Salmon Activities</a></li>
+          <li><a href="sales.html">Sales Activities</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id=''
+  </body>
   <footer>
   </footer>
 </html>
