--- a/index.html
+++ b/index.html
@@ -19,8 +19,29 @@
         </ul>
       </nav>
     </header>
-    <div id=''
+    <main>
+      <img id= "familyphoto" src="imgs/family.jpg" alt="photo of owner Pat with husband and children" />
+      <article>
+        <h2>Founder: Pat Smith</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nihil cum voluptatum odio consequuntur accusamus, ex nemo distinctio blanditiis alias fugiat cupiditate explicabo autem laborum impedit dicta expedita provident molestiae.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias exercitationem, ad totam nostrum velit reiciendis, aliquid sit, doloribus voluptatem vel optio minima ratione cumque perspiciatis voluptate praesentium eaque. Ipsa, laborum!
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, eaque id asperiores magni quis, nulla expedita in nobis eveniet atque saepe molestias voluptate unde itaque! Voluptatem recusandae deleniti temporibus dicta? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quasi accusamus mollitia expedita ipsa. Obcaecati quibusdam, cum odio alias nobis dignissimos maxime quod dolore voluptatum nam, provident ipsum sint a.ß
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate excepturi, reiciendis fuga non corrupti, beatae facilis fugiat ducimus ea et optio nostrum ad exercitationem! Esse porro harum nulla necessitatibus beatae!
+          </p>
+      </article>
+      <div id="Locations">
+        <h3>All of Our Locations:</h3>
+        <ul>
+          <li>First and Pike Hours:</li>
+          <li>SeaTac Airport Hour:</li>
+          <li>Seattle Center Hours:</li>
+          <li>Capitol Hill Hours:</li>
+          <li>Alki Hours:</li>
+        </ul>
+      </div>
+    </main>
   </body>
   <footer>
+    <!-- Social Media Information or Icons go here -->
   </footer>
 </html>
