working out CSS

--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,23 @@
   <head>
     <link rel = "stylesheet" type = "text/css" href = "css/reset.css" />
     <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
+    <!-- reference found on google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   </head>
 
   <main>
-
+      <header>
+          <h1>Pat's Salmon Cookies</h1>
+          <img title="salmon-logo" src="imgs/salmon.png" alt="realistic salmon photo" />
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Salmon Activities</a></li>
+            </ul>
+          </nav>
+        </header>
+  <body>
     <form id="newStoreInformation">
       <fieldset>
         <label>New Store Location:</label>
@@ -38,7 +51,7 @@
     <table>
       <tbody id="table"></tbody>
     </table>
-
+  </body>
   </main>
 
   <footer>
