--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Pat's Salmon Cookies</h1>
-      <img src="imgs/salmon.png" alt="realistic salmon photo" />
+      <img title="salmon-logo" src="imgs/salmon.png" alt="realistic salmon photo" />
       <nav>
         <ul>
           <li><a>About Us</a></li>
@@ -20,16 +20,14 @@
       </nav>
     </header>
     <main>
-      <img id= "familyphoto" src="imgs/family.jpg" alt="photo of owner Pat with husband and children" />
+      <img title= "familyphoto" src="imgs/family.jpg" alt="photo of owner Pat with husband and children" />
       <article>
         <h2>Founder: Pat Smith</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nihil cum voluptatum odio consequuntur accusamus, ex nemo distinctio blanditiis alias fugiat cupiditate explicabo autem laborum impedit dicta expedita provident molestiae.
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias exercitationem, ad totam nostrum velit reiciendis, aliquid sit, doloribus voluptatem vel optio minima ratione cumque perspiciatis voluptate praesentium eaque. Ipsa, laborum!
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, eaque id asperiores magni quis, nulla expedita in nobis eveniet atque saepe molestias voluptate unde itaque! Voluptatem recusandae deleniti temporibus dicta? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quasi accusamus mollitia expedita ipsa. Obcaecati quibusdam, cum odio alias nobis dignissimos maxime quod dolore voluptatum nam, provident ipsum sint a.ß
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate excepturi, reiciendis fuga non corrupti, beatae facilis fugiat ducimus ea et optio nostrum ad exercitationem! Esse porro harum nulla necessitatibus beatae!
+          <p>
+            
           </p>
       </article>
-      <div id="Locations">
+      <!-- <div id="Locations">
         <h3>All of Our Locations:</h3>
         <ul>
           <li>First and Pike Hours:</li>
@@ -38,7 +36,7 @@
           <li>Capitol Hill Hours:</li>
           <li>Alki Hours:</li>
         </ul>
-      </div>
+      </div> -->
     </main>
   </body>
   <footer>
