added gift page and more css

--- a/sales.html
+++ b/sales.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <title>Pat's Salmon Cookies Sales Page</title>
     <link rel = "stylesheet" type = "text/css" href = "css/reset.css" />
     <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
     <!-- reference found on google fonts -->
@@ -17,6 +18,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a>About Us</a></li>
               <li><a>Salmon Activities</a></li>
+              <li><a href="gifts.html">Gifts</a></li>
             </ul>
           </nav>
         </header>
@@ -47,6 +49,9 @@
 
       </fieldset>
     </form>
+
+    <img title="chinook" src="imgs/chinook.jpg" alt="realistic chinook photo" />
+      <hr>
 
     <table>
       <tbody id="table"></tbody>
