more CSS added to pages

--- a/CSS/gifts.html
+++ b/CSS/gifts.html
@@ -9,10 +9,11 @@
     </head>
     <body>
       <main>
-          <img 
+          <img title="graphicArt" src="imgs/fish.jgp" alt="Four fish with blues" />
+          <img title="shirt" src="imgs/shirt.jpg" alt="T-Shirt with two Salmon on it" />
+          <img title="cookieShape" src="imgs/cutter.jpg" alt="Salmon shaped cookie cutter" />
       </main>
     </body>
     <footer>
-
     </footer>
 </html>
