--- a/gifts.html
+++ b/gifts.html
@@ -8,12 +8,31 @@
       <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header>
+            <h1>Pat's Salmon Cookies</h1>
+            <img title="salmon-logo" src="imgs/salmon.png" alt="realistic salmon photo" />
+            <nav>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li>About Us</li>
+                <li>Salmon Activities</li>
+                <li><a href="sales.html">Sales Activities</a></li>
+              </ul>
+            </nav>
+          </header>
       <main>
-          <img title="graphicArt" src="imgs/fish.jgp" alt="Four fish with blues" />
+          <img title="graphicArt" src="imgs/fish.jpg" alt="Four fish with blues" />
+            <div class="saleDesc">$4 Sticker designed by Pat's husband Dan</div>
           <img title="shirt" src="imgs/shirt.jpg" alt="T-Shirt with two Salmon on it" />
-          <img title="cookieShape" src="imgs/cutter.jpg" alt="Salmon shaped cookie cutter" />
+            <div class="saleDesc">$20 Pat's Salmon Cookie T-Shirt </div>
+          <img src="imgs/cutter.jpeg" alt="Salmon shaped cookie cutter" />
+            <div class="saleDesc">$14 Exclusive to Pat's Salmon Cookies, cookie cutter</div>
       </main>
     </body>
     <footer>
+      <img title="social-media" src="imgs/socialmedia.jpg" alt="banner for social media" />
+      <img title="facebook" src="imgs/facebook.png" alt="faebook logo" />
+      <img title="instagram" src="imgs/The_Instagram_Logo.jpg" alt="instagram logo" />
+      <img title="twitter" src="imgs/Twitter_icon.png" alt="twitter logo" />
     </footer>
 </html>
