--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
           If you think that you have an eye for design or you just want to keep your children busy for a couple days you can enter our "Design next featured Salmon Cookie Look"! You can send us an email, you can find that on our contact page, and we will mail you one of our custom shaped salmon cookie, cookie cutters. If you win, you will come to our headquarters, located above our First and Pike location where you will teach our baking team how to recreate your design. Your design will be our feature cookie for the next 3 monthes where upon we will host this contest again. Also if you win, you will get a free cookie a day for the next year!
        </p>
      </div>
+     <div id="storeHours">
+       <h3>Store Location and Hours</h3>
+       <ol>
+         <li>First and Pike <br/> Hours: 6:00AM-8:00PM</li>
+         <li>SeaTac Airport <br/> Hours: 6:00AM-8:00PM</li>
+         <li>Seattle Center <br/> Hours: 6:00AM-8:00PM</li>
+         <li>Capitol Hill <br/> Hours: 6:00AM-8:00PM</li>
+         <li>Alki <br/> Hours: 6:00AM-8:00PM</li>
+       </ol>
+     </div>
     </main>
   </body>
   <footer>
-    <!-- Social Media Information or Icons go here -->
+    <img title="social-media" src="imgs/socialmedia.jpg" alt="banner for social media" />
+    <img title="facebook" src="imgs/facebook.png" alt="faebook logo" />
+    <img title="instagram" src="imgs/The_Instagram_Logo.jpg" alt="instagram logo" />
+    <img title="twitter" src="imgs/Twitter_icon.png" alt="twitter logo" />
   </footer>
 </html>
