--- a/sales.html
+++ b/sales.html
@@ -59,6 +59,10 @@
 
   <footer>
     <script src="JS/app.js"></script>
+    <img title="social-media" src="imgs/socialmedia.jpg" alt="banner for social media" />
+    <img title="facebook" src="imgs/facebook.png" alt="faebook logo" />
+    <img title="instagram" src="imgs/The_Instagram_Logo.jpg" alt="instagram logo" />
+    <img title="twitter" src="imgs/Twitter_icon.png" alt="twitter logo" />
   </footer>
 
 </html>
