trying to get css to work

--- a/gifts.html
+++ b/gifts.html
@@ -2,8 +2,8 @@
 <html>
   <head>
       <title>Pat's Salmon Cookies Gift Page</title>
-      <link rel = "stylesheet" type = "text/css" href = "css./reset.css" />
-      <link rel = "stylesheet" type = "text/css" href = "css./style.css" />
+      <link rel = "stylesheet" type = "text/css" href = "css/reset.css" />
+      <link rel = "stylesheet" type = "text/css" href = "css/style.css" />
       <!-- reference found on google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     </head>
